# lm-deluge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AZURE_AI_FOUNDRY_INTEGRATION.md  AZURE_FOUNDRY_CHECKLIST.md  AZURE_FOUNDRY_FILES.md  AZURE_FOUNDRY_IMPLEMENTATION_PLAN.md  AZURE_FOUNDRY_QUICK_START.md  AZURE_FOUNDRY_README.md  CLAUDE.md  LICENSE  PLAN.md  README.md  REFACTOR.md  SIMPLIFICATION.md  openai_requests_temp.jsonl  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt  schema.json  test_heal_json.py  test_schema_debug.py  test_schema_issue.py  test_single_prompt_fix.py  typecheck_issues.txt
docs/: astro.config.mjs  package-lock.json
examples/: agent_loop.md  anthropic_computer_use_kernel.py  azure_ai_foundry_example.py  batch_processing_guide.md  computer_use_guide.md  example_file_usage.py  file_handling_guide.md  mcp_tools_guide.md  multiturn.md  prompt_caching.md  pydantic_structured_outputs_example.py  random_tools_example.py  streaming_guide.md  tool_calling_guide.md
gsm8k_gepa/: gepa_state.pkl  gepa_summary.json
modal_deployments/: inference_endpoint.py  remote_client.py
old_docs/: PLAN_OLD.md  REFACTOR.md  RETRY_BUG.md
patches/: 1.md  2.md  3.md  4.md
plans/: PLAN_agent_loop_callbacks.md  PR_30_conversation.md  REASONING_CONTINUITY.md  RESPONSES_API_REASONING_TOOLS_BUG.md  RETRY_BUG.md  URL_PASSTHROUGH_PLAN.md  openai_anthropic_compat_servers.md
scripts/: ai-code-review-prompt.md  ai-code-review.sh  banned-strings-py.sh  banned-weird-spaces.sh  max-lines-check.sh  slack-notify.py
tests/: chat_loop.py  helpers.py  run_all.sh  test_all_models.py  test_batch_real.py  test_batch_refactor.py  test_batch_tool.py  test_bedrock_computer_use.py  test_bedrock_models.py  test_builtin_tools.py  test_cache.py  test_client_tracker_integration.py  test_computer_use.py  test_computer_use_integration.py  test_debug_format.py  test_docs.py  test_execute_once.py  test_file_integration.py  test_file_support.py  test_file_upload.py  test_files_real.py  test_filesystem.py  test_filesystem_live.py  test_heal_json.py  test_image_fingerprint_cache.py  test_image_models.py  test_image_utils.py  test_logprobs_refactor.py  test_max_concurrent_requests.py  test_mcp_tools.py  test_mock_openai.py  test_native_mcp_server.py  test_openai_responses.py  test_openrouter_generic.py  test_otc.py  test_process_single_request.py  test_prompt_caching.py  test_random.py  test_random_integration.py  test_random_simple.py  (+14 more)
unused/: cache.py  inference_endpoint.py  modal.py  prompt_legacy.py  (+2 more)
(+580 files in other folders)
