[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "lm_deluge"
version = "0.0.75"
authors = [{ name = "Benjamin Anderson", email = "ben@trytaylor.ai" }]
description = "Python utility for using LLM API models."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = { text = "" }
classifiers = []
dependencies = [
    "python-dotenv",
    "json5",
    "PyYAML",
    "pandas",
    "aiohttp",
    "tiktoken",
    "xxhash",
    "tqdm",
    "google-auth",
    "requests-aws4auth",
    "pydantic",
    "bs4",
    "lxml",
    "pdf2image",
    "pillow",
    "fastmcp>=2.4",
    "rich",
    # "textual>=0.58.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

# [project.scripts]
# deluge = "lm_deluge.cli:main"
