[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "lm_deluge"
version = "0.0.112"
authors = [{ name = "Benjamin Anderson", email = "ben@trytaylor.ai" }]
description = "Python utility for using LLM API models."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = { text = "" }
classifiers = []
dependencies = [
    "python-dotenv",
    "json5",
    "PyYAML",
    "aiohttp",
    "tiktoken",
    "xxhash",
    "tqdm",
    "google-auth",
    "requests-aws4auth",
    "pydantic",
    "bs4",
    "lxml",
    "pdf2image",
    "pillow",
    "rich"
]

[project.optional-dependencies]
aws = ["boto3>=1.28.0"]
docker = ["docker>=7.0.0"]
full_text_search = ["tantivy>=0.21.0", "lenlp>=0.1.0"]
sandbox = ["modal>=0.64.0", "daytona-sdk>=0.1.4", "docker>=7.0.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = ["ty", "pre-commit"]

[project.scripts]
deluge = "lm_deluge.cli:main"
deluge-server = "lm_deluge.server.__main__:main"

[tool.setuptools.package-data]
lm_deluge = ["skill/*.md"]
